feat: added core bankin system and simple messaging system

--- a/dev.env
+++ b/dev.env
@@ -5,8 +5,13 @@ DEBUG=True
 # Bank 
 ACC_NO_LEN=14
 CIF_LEN=11
+MIN_BALANCE=500
 
 # Twilio
 TWILIO_ACCOUNT_SID=ACf62b188b59bb2c17f037bf1c703bf057
 TWILIO_AUTH_TOKEN=b6de7b717d37c3ebea98ba3a496ffa60
 TWILIO_PHONE_NUMBER=+13609966020
+
+
+CELERY_BROKER_URL="redis://localhost:6379"
+CELERY_RESULT_BACKEND="redis://localhost:6379"
